samples/_failures_safe/1761126888_434e6d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3194063a.c: In function ‘main’:
./samples/SAFE/__tmp_3194063a.c:183:5: error: expected declaration or statement at end of input
  183 |     }
      |     ^
